--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     // Apply the java plugin to add support for Java
     id 'java'
 
+    id "org.flywaydb.flyway" version "7.7.0"
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
     id 'org.springframework.boot' version '2.4.3'
@@ -24,21 +25,35 @@ repositories {
     mavenCentral()
 }
 
+flyway {
+    url = 'jdbc:mysql://localhost:3306/db'
+    user = 'user'
+    password = 'password'
+}
+
 dependencies {
     // This dependency is used by the application.
 
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2'
+    compile('org.flywaydb:flyway-core')
     compile('org.liquibase:liquibase-core')
+    compile('mysql:mysql-connector-java')
     implementation('org.springframework.boot:spring-boot-starter-web')
     compileOnly 'org.projectlombok:lombok'
+    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
     annotationProcessor 'org.projectlombok:lombok'
     // Use JUnit test framework
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+
 application {
     // Define the main class for the application.
     mainClassName = 'jpa.tutorial.App'
+}
+
+test {
+    useJUnitPlatform()
 }
