--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,17 +10,30 @@ spring:
     url:  jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
     username: sa
     password:
+    testOnBorrow: true
+    testWhileIdle: true
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 30000
+    validationQuery: SELECT 1
+    max-active: 15
+    max-idle: 10
+    max-wait: 8000
     driverClassName: org.h2.Driver
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
   liquibase:
     enabled: true
-    user: sa
-    password:
-    url:  jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    url:  ${spring.datasource.url}
     change-log: classpath:/db/master.yaml
 server:
   port: 8080
+flyway:
+  url:  jdbc:mysql://localhost:3306/db
+  user: user
+  password: password
