--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,18 @@ dependencies {
     // This dependency is used by the application.
 
     implementation 'com.google.guava:guava:29.0-jre'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
     implementation 'com.h2database:h2'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile('org.flywaydb:flyway-core')
     compile('org.liquibase:liquibase-core')
     compile('mysql:mysql-connector-java')
     implementation('org.springframework.boot:spring-boot-starter-web')
+
     compileOnly 'org.projectlombok:lombok'
-    compile group: 'com.github.javafaker', name: 'javafaker', version: '0.15'
     annotationProcessor 'org.projectlombok:lombok'
     // Use JUnit test framework
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
